correcao do link para documentacao da API

--- a/src/protected/application/translations/es_ES.po
+++ b/src/protected/application/translations/es_ES.po
@@ -3267,8 +3267,7 @@ msgstr "texto de la sección \"desarrolladores\" de la home (página principal)"
 #: application/themes/BaseV1/Theme.php:180
 msgid ""
 "Existem algumas maneiras de desenvolvedores interagirem com o Mapas "
-"Culturais. A primeira é através da nossa <a href=\"https://github.com/"
-"hacklabr/mapasculturais/blob/master/doc/api.md\" target=\"_blank\">API</a>. "
+"Culturais. A primeira é através da nossa <a href=\"https://github.com/hacklabr/mapasculturais/blob/master/documentation/docs/mc_config_api.md" target=\"_blank\">API</a>. "
 "Com ela você pode acessar os dados públicos no nosso banco de dados e "
 "utilizá-los para desenvolver aplicações externas. Além disso, o Mapas "
 "Culturais é construído a partir do sofware livre <a href=\"http://"
